2022-02-24  Ryosuke Niwa  <rniwa@webkit.org>

        Explain visit children and opaque roots in Introduction.md
        https://bugs.webkit.org/show_bug.cgi?id=236894

        Reviewed by Saam Barati.

        Added the descriptions of visit children and opaque roots
        as well as how to add IDL files.

        * Introduction.md:

2022-02-23  Elliott Williams  <emw@apple.com>

        [XCBuild] Don't automatically use the ../Internal/WebKit workspace
        https://bugs.webkit.org/show_bug.cgi?id=237115

        Reviewed by Alexey Proskuryakov.

        When the USE_WORKSPACE=YES Make flag was added in https://commits.webkit.org/246232@main, we
        configured Make to automatically use the workspace at ../Internal/WebKit/WebKit.xcworkspace,
        if it was available. The idea was to make it easier for workspace builds to automatically
        detect dependencies needed by folks at Apple, like WebKitAdditions.

        In practice, this has made workspace builds silently rely on code from outside of the WebKit
        repo, and it's unintuitive since non-workspace Make builds do not do this.

        * Makefile.shared:

2022-02-23  W.D. Xiong  <wdx@apple.com>

        Add wdx's Github username to contributors.json
        https://bugs.webkit.org/show_bug.cgi?id=237106

        Unreviewed.

        * metadata/contributors.json:

2022-02-23  Zan Dobersek  <zdobersek@igalia.com>

        [GStreamer] Add WebKitDMABufVideoSink
        https://bugs.webkit.org/show_bug.cgi?id=236883

        Reviewed by Philippe Normand.

        * Source/cmake/FindGStreamer.cmake:
        Also search for gstreamer-allocators-1.0, produce the relevant variables
        containing include directories and cflags.

2022-02-22  Philippe Normand  <pnormand@igalia.com>

        [GStreamer] Initial MediaRecorder implementation
        https://bugs.webkit.org/show_bug.cgi?id=236558

        Reviewed by Xabier Rodriguez-Calvar.
